cargo_check_final_universal.log
warning: /app/crates/auth-platform/Cargo.toml: file `/app/crates/auth-platform/src/lib.rs` found to be present in multiple build targets:
  * `lib` target `auth_platform`
  * `integration-test` target `lib`
warning: unused imports: `Serialize` and `de::DeserializeOwned`
 --> crates/auth-cache/src/lib.rs:4:13
  |
4 | use serde::{de::DeserializeOwned, Serialize};
  |             ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `auth-cache` (lib) generated 1 warning (run `cargo fix --lib -p auth-cache` to apply 1 suggestion)
    Checking auth-api v0.1.0 (/app/crates/auth-api)
error[E0432]: unresolved import `auth_core::services::workflow`
 --> crates/auth-api/src/handlers/workflow/universal.rs:8:26
  |
8 | use auth_core::services::workflow::{FlowContext, FlowAction, FlowResult, FlowState, WorkflowEngine, StepHandler};
  |                          ^^^^^^^^ could not find `workflow` in `services`

error[E0432]: unresolved import `auth_core::services::workflow`
 --> crates/auth-api/src/handlers/workflow/lazy_upgrade.rs:5:26
  |
5 | use auth_core::services::workflow::{FlowContext, FlowAction, FlowState, StepHandler};
  |                          ^^^^^^^^ could not find `workflow` in `services`

error[E0432]: unresolved import `async_trait`
  --> crates/auth-api/src/handlers/workflow/universal.rs:10:5
   |
10 | use async_trait::async_trait;
   |     ^^^^^^^^^^^ use of unresolved module or unlinked crate `async_trait`
   |
   = help: if you wanted to use a crate named `async_trait`, use `cargo add async_trait` to add it to your `Cargo.toml`

error[E0432]: unresolved import `async_trait`
 --> crates/auth-api/src/handlers/workflow/lazy_upgrade.rs:4:5
  |
4 | use async_trait::async_trait;
  |     ^^^^^^^^^^^ use of unresolved module or unlinked crate `async_trait`
  |
  = help: if you wanted to use a crate named `async_trait`, use `cargo add async_trait` to add it to your `Cargo.toml`

warning: unused import: `StatusCode`
 --> crates/auth-api/src/handlers/oidc_provider.rs:5:12
  |
5 |     http::{StatusCode, HeaderMap},
  |            ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::sync::Arc`
 --> crates/auth-api/src/handlers/oidc_provider.rs:8:5
  |
8 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `http::StatusCode`
  --> crates/auth-api/src/handlers/auth_flow.rs:14:5
   |
14 |     http::StatusCode,
   |     ^^^^^^^^^^^^^^^^

warning: unused import: `std::collections::HashMap`
 --> crates/auth-api/src/handlers/workflow/universal.rs:9:5
  |
9 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `uuid::Uuid`
  --> crates/auth-api/src/handlers/workflow/universal.rs:11:5
   |
11 | use uuid::Uuid;
   |     ^^^^^^^^^^

warning: unused import: `Json`
 --> crates/auth-api/src/error.rs:4:5
  |
4 |     Json,
  |     ^^^^

For more information about this error, try `rustc --explain E0432`.
warning: `auth-api` (lib) generated 6 warnings
error: could not compile `auth-api` (lib) due to 4 previous errors; 6 warnings emitted
